Fix css range input width issue on firefox

--- a/styles/base.css
+++ b/styles/base.css
@@ -2642,6 +2642,7 @@ input[type="radio"]:checked::before {
 
 .settings .controls .input-group input {
   flex: 1;
+  width: 100%;
 }
 
 .settings .controls .input-group label {
